--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "1920. Build Array from Permutation.C": "cpp",
         "3190. Find Minimum Operations to make All Elements Divisible by Three.C": "cpp",
         "1929. Concatenation of Array.C": "cpp",
-        "2011. Final Value of Variable After Performing Operations.C": "cpp"
+        "2011. Final Value of Variable After Performing Operations.C": "cpp",
+        "2942. Find Words Containing Character.C": "cpp"
     }
 }
